# Sibsutis

./: README.md
Курс 3/AVS/Lab 1/: script.sh
Курс 3/AVS/Lab 2/: index_2.html
Курс 3/AVS/Lab 3/: Dockerfile
Курс 3/AVS/Lab 3/ansible/: ansible.cfg  cont_1.txt
Курс 3/AVS/Lab 4/: index2.html  nginx.conf
Курс 3/AVS/Lab 5/: nginx-ingress.yaml
Курс 3/AVS/RGZ/: docker-compose.yaml
Курс 3/AVS/RGZ/alertmanager/: alertmanager.yml
Курс 3/AVS/RGZ/data/: bot.db
Курс 3/AVS/RGZ/letsencrypt/: acme.json
Курс 3/AVS/RGZ/prometheus/: alert.rules  prometheus.yml
Курс 3/FLP/Lab 1/: script.lisp
Курс 3/FLP/Lab 2/: script.lisp
Курс 3/FLP/Lab 3/: script.lisp
Курс 3/FLP/Lab 4/: script.pl
Курс 3/FLP/Lab 5/: lab5_1.pl  lab5_2.pl  lab5_3.pl  lab5_4.pl
Курс 3/FLP/RGZ/: input.txt  task_1.pl  task_2.pl
Курс 3/OS/Coursework/: CMakeLists.txt  OS_Coursework
Курс 3/OS/Coursework/src/: main.cpp
Курс 3/OS/Lab_10/: Makefile
Курс 3/OS/Lab_11/: Lab_11_1.cpp  Lab_11_2.cpp
Курс 3/OS/Lab_3/: CMakeLists.txt
Курс 3/OS/Lab_5/: CMakeLists.txt  list.c  main.c
Курс 3/OS/Lab_7/: Makefile  doubly_linked_list.cpp  lab7  lab7.cpp
Курс 3/OS/Lab_8/: Makefile  sequental.cpp
Курс 3/OS/Lab_9/: lab_9_1.c  lab_9_2.c
Курс 3/Ruban/: 11stolbik.py  12fast_multiplication.py  13kraskall.py  15ford-bell.py  16backpack.py  17skobki.py  18rgz.py  5pbf_n32.py  6bpf_nlogn.py  8svertka_n2.py  9svertka_nlogn.py  9svrtka_n32.py
Курс 3/VPHAMI/Lab 1/CalcFigure/: .gitignore  CMakeLists.txt  figurearea.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
Курс 3/Семестр 1/AVS/Lab 1/: script.sh
Курс 3/Семестр 1/AVS/Lab 2/: index_1.html
Курс 3/Семестр 1/AVS/Lab 4/: haproxy.cfg  index1.html
Курс 3/Семестр 1/AVS/RGZ/: docker-compose.yaml
Курс 3/Семестр 1/FLP/Lab 1/: script.lisp
Курс 3/Семестр 1/FLP/Lab 2/: script.lisp
Курс 3/Семестр 1/FLP/Lab 4/: script.pl
Курс 3/Семестр 1/FLP/Lab 5/: lab5_2.pl  lab5_3.pl  lab5_4.pl
Курс 3/Семестр 1/FLP/RGZ/: output.txt  task_1.pl  task_2.pl
Курс 3/Семестр 1/OS/Lab_10/: Lab_10.cpp
Курс 3/Семестр 1/OS/Lab_11/: Makefile
Курс 3/Семестр 1/OS/Lab_3/: main.c
Курс 3/Семестр 1/OS/Lab_4/: CMakeLists.txt  main.c
Курс 3/Семестр 1/OS/Lab_5/: list.h
Курс 3/Семестр 1/OS/Lab_6/: CMakeLists.txt  reader.c  run_command.txt
Курс 3/Семестр 1/OS/Lab_7/: Makefile  doubly_linked_list.h
Курс 3/Семестр 1/OS/Lab_8/: Makefile  pthreads.cpp  threads.cpp
Курс 3/Семестр 1/OS/Lab_9/: Makefile  lab_9_3.cpp
Курс 3/Семестр 1/Ruban/: 10svertka_nlogn.py  14Deyxstra.py  16backpack.py  5pbf_n32.py  6bpf_nlogn.py  7svertka_prost.py  8svertka_n2.py  9svrtka_n32.py
Курс 3/Семестр 2/AVMO/Coursework/: CMakeLists.txt  Example.txt  input.txt
Курс 3/Семестр 2/AVMO/Coursework/include/: Fraction.hpp  Simplex.hpp
Курс 3/Семестр 2/AVMO/Coursework/src/: Fraction.cpp  Simplex.cpp  main.cpp
Курс 3/Семестр 2/AVMO/Lab_1/: main.py  matrix.txt
Курс 3/Семестр 2/CUDA/Coursework/: build_and_run.sh  cuda_api.cu  cuda_api_driver.cu  kernel.cu
Курс 3/Семестр 2/CUDA/Lab_1/: main  main.cu
Курс 3/Семестр 2/CUDA/Lab_10/: CMakeLists.txt  build_and_run.sh
Курс 3/Семестр 2/CUDA/Lab_10/matrix_transpose/: matrix_transpose  matrix_transpose.cu
Курс 3/Семестр 2/CUDA/Lab_10/vector_product/: vector_product  vector_product.cu
Курс 3/Семестр 2/CUDA/Lab_11/: build_and_run.sh
Курс 3/Семестр 2/CUDA/Lab_12/: build_and_run.sh  cublas_example  (+2 more)
Курс 4/Семестр 1/: README.md
Курс 4/Семестр 1/DB/: lab1.sql  lab2.sql  lab3.sql  lab4.sql  lab5.sql  lab6.sql
Курс 4/Семестр 1/ISec/: crypto.py  lab1.py  lab2.py  lab_1_2_3.py  lab_4_7.py  lab_8_11.py
Курс 4/Семестр 1/MDP/: Labs.sln
Курс 4/Семестр 1/Social/: Влияние глобализации на локальные культуры.md
Курс 4/Семестр 1/TYAP/: lab_1.py  lab_2.py  lab_3.py  lab_4.py  rgr_1.py  ТЯП_РГР.docx
Курс 4/Семестр 2/DB/: Lab_1.js  Lab_2.js
Курс 4/Семестр 2/TI/: clean.py  createFile.py  file2.txt  main.py  main_2.py  main_2_temp.py  main_3.py  main_4.py  main_5.py  onegin_clean.txt  random_biased.txt  ТИ_2.docx
(+290 files in other folders)
